# brain-decision-receipts

./: .gitignore  README.md  pyproject.toml
examples/: permit-receipt.json
rules/: insurance-trip-cancel-2025.12.yaml  insurance-trip-cancel-2026.01.yaml  zoning-r1-2026.01.yaml
scenarios/: claim-rules-mismatch.json  permit-auto-approve.json  permit-human-review.json
site/: app.js  dashboard.js  embedded-demos.js  index.html  runner.html  runner.js  shared.js  styles.css  vision.html
site/data/: claim-rules-mismatch.json  permit-human-review.json
src/brain_decision_receipts/: __init__.py  cli.py  confidence.py  doctor.py  models.py  pipeline.py  planner.py  report.py
tests/: test_cli.py  test_receipts.py
