[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-decision-receipts"
version = "0.1.0"
description = "Institutional agent decision receipts for auditable permit and claim automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Enaguthi" }]
keywords = ["audit", "compliance", "bayesian", "rules-engine", "govtech"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
brain-receipts = "brain_decision_receipts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_decision_receipts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
